/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    java
    application
    kotlin("jvm") version "1.9.20" // Version plus récente de Kotlin
    id("org.openjfx.javafxplugin") version "0.1.0"
}

javafx {
    version = "21"
    modules("javafx.controls", "javafx.fxml")
}

repositories {
    mavenCentral()
}

val kotlinVersion = "1.9.20"

dependencies {
    implementation("mysql:mysql-connector-java:8.0.33")
    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")

    // Pour lire l'entrée utilisateur
    implementation("org.jline:jline:3.21.0")

    // Si vous n'utilisez pas le catalogue de versions, décommentez ces lignes :
    testImplementation("junit:junit:4.13.2")
    implementation("com.google.guava:guava:31.1-jre")

    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.3")
    implementation("com.fasterxml.jackson.core:jackson-core:2.15.3")
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.15.3")

    // Si vous utilisez le catalogue de versions, gardez ces lignes :
    // testImplementation(libs.junit)
    // implementation(libs.guava)
}

sourceSets {
    main {
        java.srcDirs("src")
        resources.srcDirs("resources")
    }

}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21)) // Ou une version plus récente si possible
    }
}

application {
    mainClass.set("application.App")
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.getByName("run", JavaExec::class) {
    standardInput = System.`in`
    jvmArgs = listOf("-Dfile.encoding=UTF-8")
}